--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "Sample Redux Application",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --progress"
+    "start": "webpack-dev-server --hot --progress  --port 8181"
   },
   "author": "Boris Dinkevich & Ilya Gelman",
   "license": "MIT",
   "dependencies": {
-    "jquery": "3.2.1",
-    "redux": "3.7.2"
+    "jquery": "3.7.1",
+    "redux": "5.0.1"
   },
   "devDependencies": {
-    "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.7"
+    "webpack": "5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "5.2.0"
   }
 }
